--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,17 @@
 
 	<dependencies>
 		<dependency>
+		      <groupId>com.google.appengine</groupId>
+		      <artifactId>appengine-api-1.0-sdk</artifactId>
+		      <version>${appengine.target.version}</version>
+		    </dependency>
+		    <dependency>
+		      <groupId>javax.servlet</groupId>
+		      <artifactId>servlet-api</artifactId>
+		      <version>2.5</version>
+		      <scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-web-api</artifactId>
 			<version>7.0</version>
